# YASTL

./: .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  ct-install.sh  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  database_schema.py  main.py  workers.py
app/api/: _helpers.py  routes_backup.py  routes_bulk.py  routes_categories.py  routes_collections.py  routes_favorites.py  routes_filament.py  routes_import.py  routes_libraries.py  routes_model_categories.py  routes_model_files.py  routes_model_tags.py  routes_models.py  routes_prints.py  routes_saved_searches.py  routes_scan.py  routes_search.py  routes_settings.py  routes_stats.py  routes_status.py  (+2 more)
deploy/: proxmox-setup.sh
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
tests/: conftest.py  test_advanced_filtering.py  test_ai_client.py  test_ai_semantic.py  test_ai_tagger.py  test_automation_settings.py  test_config.py  test_database.py  test_downloader.py  test_hasher.py  test_health.py  test_import_credentials.py  test_importer.py  test_preview.py  test_processor.py  test_routes_backup.py  test_routes_bulk.py  test_routes_categories.py  test_routes_collections.py  test_routes_favorites.py  test_routes_filament.py  test_routes_models.py  test_routes_prints.py  test_routes_saved_searches.py  test_routes_scan.py  test_routes_search.py  test_routes_tags.py  test_scanner.py  test_schemas.py  test_scrapers.py  test_tagger_shape.py  test_thumbnail.py  test_updater.py  test_watcher.py  test_zip_handler.py
(+76 files in other folders)
