[project]
name = "yastl"
version = "0.1.0"
description = "Yet Another STL - 3D Model Library"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.18",
    "trimesh>=4.5.0",
    "numpy>=2.0.0",
    "numpy-stl>=3.1.0",
    "watchdog>=6.0.0",
    "Pillow>=11.0.0",
    "pygltflib>=1.16.0",
    "xxhash>=3.5.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "jinja2>=3.1.0",
    "manifold3d>=3.0.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
